# DataStructureLearning

./: .gitignore  CMakeLists.txt  README.md  build.sh  clean.sh
doc/: arraylist.md  linkedlist.md
src/: main.c
src/arraylist/: CMakeLists.txt  arraylist.c  arraylist.h  arraylist.h.gch
src/common/: struct_common.c  struct_common.h  struct_common.h.gch
src/linkedlist/: CMakeLists.txt  linkedlist.c  linkedlist.h
